fix overflow bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,3 +83,8 @@ a:hover {
 .nav {
   font-family: 'DIN-Mono';
 }
+
+.project {
+  width: 25rem;
+  height: 30rem;
+}
